--- a/client/public/style.css
+++ b/client/public/style.css
@@ -1,4 +1,4 @@
-*{color:red}
+*,*::after,*::before{margin:0;padding:0;box-sizing:inherit}html{font-size:62.5%}body{box-sizing:border-box}
 
 
 /*# sourceMappingURL=style.css.map*/
