--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,1 +1,10 @@
+@import 'abstracts/variables';
+@import 'abstracts/mixins';
 @import 'base/base';
+@import 'base/animations';
+@import 'base/typography';
+@import 'base/utilities';
+@import 'pages/landing';
+@import 'components/button';
+@import 'components/composition';
+@import 'layout/grid';
