--- a/client/src/styles/abstracts/_variables.scss
+++ b/client/src/styles/abstracts/_variables.scss
@@ -2,6 +2,8 @@ $color-primary: #e84796;
 $color-secondary: #4695E8;
 $light-grey: #969696;
 $color-grey-light-1: #f7f7f7;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
 $color-white: #fff;
 $color-black: #000;
 $color-grey-dark: #777;
