--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -7,4 +7,7 @@
 @import 'pages/landing';
 @import 'components/button';
 @import 'components/composition';
+@import 'components/navbar';
+@import 'components/ingredient';
+@import 'components/form';
 @import 'layout/grid';
